--- a/data6100_final_proj.ipynb
+++ b/data6100_final_proj.ipynb
@@ -23,6 +23,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "test"
+      ],
+      "metadata": {
+        "id": "BVOPPjO1zI_C"
+      },
+      "id": "BVOPPjO1zI_C"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "In this notebook, we are going to estimate the New York City Taxi Fare by Linear Regression. It used to be a competition organized by Kaggle in partnership with Google Cloud and Coursera [here](https://www.kaggle.com/competitions/new-york-city-taxi-fare-prediction/overview). In order to estimate it, the following steps were done.\n",
         "\n",
         "1. The train and test data provided by Kaggle imported, cleaned and preapred for runing the model.\n",
