--- a/data6100_final_proj.ipynb
+++ b/data6100_final_proj.ipynb
@@ -1811,11 +1811,26 @@
         "gs_cv.best_params_"
       ],
       "metadata": {
-        "id": "eTw9wLU5TsTt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eTw9wLU5TsTt",
+        "outputId": "9b4520a3-425c-4eab-9ac8-0b0c2bf16ade"
       },
       "id": "eTw9wLU5TsTt",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 168,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'learning_rate': 0.1, 'max_depth': 4, 'n_estimators': 100}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 168
+        }
+      ]
     },
     {
       "cell_type": "markdown",
