--- a/data6100_final_proj.ipynb
+++ b/data6100_final_proj.ipynb
@@ -141,16 +141,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HXJKQ3dLYu3F",
-        "outputId": "3fe4f8c9-bb63-49d3-b153-fdbcb6fcf4d8"
+        "outputId": "9ff36cae-00bb-4eea-a9cd-9898ef1e24a7"
       },
       "id": "HXJKQ3dLYu3F",
-      "execution_count": 113,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "new-york-city-taxi- 100%[===================>]   1.56G  27.4MB/s    in 66s     \n",
+            "new-york-city-taxi- 100%[===================>]   1.56G  83.0MB/s    in 18s     \n",
             "Archive:  new-york-city-taxi-fare-prediction.zip\n",
             "  inflating: GCP-Coupons-Instructions.rtf  \n",
             "  inflating: sample_submission.csv   \n",
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 3,
       "id": "afad4bda-224f-41b0-ad54-698a44ce4238",
       "metadata": {
         "id": "afad4bda-224f-41b0-ad54-698a44ce4238"
@@ -245,7 +245,7 @@
         "id": "lHeJ_LCcdm-6"
       },
       "id": "lHeJ_LCcdm-6",
-      "execution_count": 115,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -281,10 +281,10 @@
           "height": 421
         },
         "id": "GC8JXcHyjMFL",
-        "outputId": "befcb0a4-74e3-4636-95dd-81846783d424"
+        "outputId": "a9a0ac4d-6cdd-4473-bb59-1e13ec75534c"
       },
       "id": "GC8JXcHyjMFL",
-      "execution_count": 116,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +324,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-371f2a6c-149c-4ca9-9426-0071f720e64c\">\n",
+              "  <div id=\"df-9a2319a2-1642-4fbd-98f2-4784677b7d2c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -450,7 +450,7 @@
               "</table>\n",
               "<p>109914 rows × 14 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-371f2a6c-149c-4ca9-9426-0071f720e64c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a2319a2-1642-4fbd-98f2-4784677b7d2c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -501,12 +501,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-371f2a6c-149c-4ca9-9426-0071f720e64c button.colab-df-convert');\n",
+              "          document.querySelector('#df-9a2319a2-1642-4fbd-98f2-4784677b7d2c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-371f2a6c-149c-4ca9-9426-0071f720e64c');\n",
+              "          const element = document.querySelector('#df-9a2319a2-1642-4fbd-98f2-4784677b7d2c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -567,10 +567,10 @@
           "height": 646
         },
         "id": "jZn-5RW4Z5Kb",
-        "outputId": "0c159c89-ce37-4db9-ba9b-1e537f1b7f97"
+        "outputId": "dd05d367-265b-4d2d-fce2-55dd5111a000"
       },
       "id": "jZn-5RW4Z5Kb",
-      "execution_count": 117,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0357ba1c-1cad-49dd-a15e-7d9aae2d96f6\">\n",
+              "  <div id=\"df-7861ead1-271a-4c82-8621-4c84f484ceaa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -933,7 +933,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0357ba1c-1cad-49dd-a15e-7d9aae2d96f6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7861ead1-271a-4c82-8621-4c84f484ceaa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -984,12 +984,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0357ba1c-1cad-49dd-a15e-7d9aae2d96f6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7861ead1-271a-4c82-8621-4c84f484ceaa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0357ba1c-1cad-49dd-a15e-7d9aae2d96f6');\n",
+              "          const element = document.querySelector('#df-7861ead1-271a-4c82-8621-4c84f484ceaa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1012,7 +1012,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 117
+          "execution_count": 6
         }
       ]
     },
@@ -1052,10 +1052,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AwX_NDR-l0IC",
-        "outputId": "18ab6005-1a79-40f8-db8d-a2eb216ba158"
+        "outputId": "b2de2dfb-bf07-4050-858e-7e7e8a2fd6e6"
       },
       "id": "AwX_NDR-l0IC",
-      "execution_count": 118,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,10 +1113,10 @@
           "height": 297
         },
         "id": "4aOzPrXi914S",
-        "outputId": "a2fc29c3-739a-41be-f6c1-4f8e1aad6d4c"
+        "outputId": "2e6cb795-0fa2-4244-c360-60998d2a1951"
       },
       "id": "4aOzPrXi914S",
-      "execution_count": 119,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1166,10 +1166,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oppGcJXB-Xxy",
-        "outputId": "48e4f593-02d3-4d77-b521-9d1b4aff84a7"
+        "outputId": "ee78d8f2-ad9e-40cf-e11c-64d879a8899f"
       },
       "id": "oppGcJXB-Xxy",
-      "execution_count": 120,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1216,10 +1216,10 @@
           "height": 456
         },
         "id": "ZstXyEMiAnus",
-        "outputId": "acae19d2-16dc-4768-bc45-219349b59fc2"
+        "outputId": "454edc77-0244-4cea-8818-db077f178b41"
       },
       "id": "ZstXyEMiAnus",
-      "execution_count": 121,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1350,7 +1350,7 @@
         "id": "In166fGhOC3E"
       },
       "id": "In166fGhOC3E",
-      "execution_count": 122,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1366,13 +1366,13 @@
       ],
       "metadata": {
         "id": "YyCeGOv4N7Cz",
-        "outputId": "c2c63e14-3195-4b24-eca0-a5f34d22c6ec",
+        "outputId": "6783ce82-c158-4495-9de0-397664b8f97f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "YyCeGOv4N7Cz",
-      "execution_count": 123,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1382,7 +1382,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 123
+          "execution_count": 12
         }
       ]
     },
@@ -1413,13 +1413,13 @@
       ],
       "metadata": {
         "id": "D5vCmPpDN7Al",
-        "outputId": "21f50ec1-9954-458e-e8e2-324fe2d18b81",
+        "outputId": "e5933eaf-d72d-4a31-de5d-9ee362ad7216",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "D5vCmPpDN7Al",
-      "execution_count": 124,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1447,13 +1447,13 @@
       ],
       "metadata": {
         "id": "_t6x75CmN69_",
-        "outputId": "a187f1cc-18a4-4ec1-f144-161060337bb4",
+        "outputId": "2fa181af-3602-4fb9-f8ec-72f687aaf44e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "_t6x75CmN69_",
-      "execution_count": 125,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1481,7 +1481,7 @@
         "id": "GgQeLRHQRm88"
       },
       "id": "GgQeLRHQRm88",
-      "execution_count": 126,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1535,14 +1535,14 @@
       ],
       "metadata": {
         "id": "-doq2ZowN65k",
-        "outputId": "527bf0ed-7b76-4ecc-c738-31a159b6e078",
+        "outputId": "bae02fe1-ecd5-4e56-a7c4-a488e1fc73ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
       "id": "-doq2ZowN65k",
-      "execution_count": 127,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1589,14 +1589,14 @@
       ],
       "metadata": {
         "id": "63H0fwg2RzHF",
-        "outputId": "a3155479-f067-453e-ce12-2e789bf75099",
+        "outputId": "a474e4ab-44b4-4254-8ccd-e86c766b2682",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
         }
       },
       "id": "63H0fwg2RzHF",
-      "execution_count": 128,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1685,10 +1685,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3wImyamxlVIg",
-        "outputId": "a61d8623-4da6-44d0-dfd6-1bc5f188099b"
+        "outputId": "a58c3ce9-5c15-4fcf-f81e-1e06e5858329"
       },
       "id": "3wImyamxlVIg",
-      "execution_count": 129,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1698,7 +1698,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 129
+          "execution_count": 18
         }
       ]
     },
@@ -1716,7 +1716,7 @@
         "id": "FfS2l-IHi9HX"
       },
       "id": "FfS2l-IHi9HX",
-      "execution_count": 141,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1730,7 +1730,7 @@
         "id": "EWDQSym2lVU4"
       },
       "id": "EWDQSym2lVU4",
-      "execution_count": 144,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1747,40 +1747,24 @@
         "id": "PWdN5VHMiRd-"
       },
       "id": "PWdN5VHMiRd-",
-      "execution_count": 151,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "reg = ensemble.GradientBoostingRegressor(**params)\n",
-        "reg.fit(X_train1, y_train1)\n",
+        "# reg = ensemble.GradientBoostingRegressor(**params)\n",
+        "# reg.fit(X_train1, y_train1)\n",
         "\n",
-        "mse = mean_squared_error(y_test1, reg.predict(X_test1), squared=False)\n",
-        "print(\"The mean squared error (MSE) on test set: {:.4f}\".format(mse))"
+        "# mse = mean_squared_error(y_test1, reg.predict(X_test1), squared=False)\n",
+        "# print(\"The mean squared error (MSE) on test set: {:.4f}\".format(mse))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_ypYJ7XUjQm_",
-        "outputId": "08a93714-8252-41e8-b749-ab2c01f21049"
+        "id": "_ypYJ7XUjQm_"
       },
       "id": "_ypYJ7XUjQm_",
-      "execution_count": 152,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "GradientBoostingRegressor(learning_rate=0.01, max_depth=4, min_samples_split=5,\n",
-              "                          n_estimators=1000)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 152
-        }
-      ]
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1796,15 +1780,15 @@
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
-        "\n",
+        "# due to lack of resources we run this several times to choose the best possbile combinations.\n",
         "param_grid = {\n",
-        "    'n_estimators': [10, 100],\n",
-        "    'max_depth': [2, 4],\n",
-        "    'learning_rate': [0.01, 0.1],\n",
+        "    'n_estimators': [100, 500],\n",
+        "    'max_depth': [4, 6],\n",
+        "    'learning_rate': [0.1, 1],\n",
         "}\n",
         "\n",
         "est = ensemble.GradientBoostingRegressor()\n",
-        "# this may take some minutes\n",
+        "\n",
         "gs_cv = GridSearchCV(est, param_grid, cv=5).fit(X_train, y_train)\n",
         "\n",
         "# best hyperparameter setting\n",
@@ -1815,20 +1799,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eTw9wLU5TsTt",
-        "outputId": "9b4520a3-425c-4eab-9ac8-0b0c2bf16ade"
+        "outputId": "512c3063-5774-468a-9543-ddcfec7c37f9"
       },
       "id": "eTw9wLU5TsTt",
-      "execution_count": 168,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'learning_rate': 0.1, 'max_depth': 4, 'n_estimators': 100}"
+              "{'learning_rate': 0.1, 'max_depth': 6, 'n_estimators': 500}"
             ]
           },
           "metadata": {},
-          "execution_count": 168
+          "execution_count": 24
         }
       ]
     },
