--- a/data6100_final_proj.ipynb
+++ b/data6100_final_proj.ipynb
@@ -1737,9 +1737,9 @@
       "cell_type": "code",
       "source": [
         "params = {\n",
-        "    \"n_estimators\": 1000,\n",
-        "    \"max_depth\": 4,\n",
-        "    \"learning_rate\": 0.01,\n",
+        "    \"n_estimators\": 500,\n",
+        "    \"max_depth\": 6,\n",
+        "    \"learning_rate\": 0.1,\n",
         "    \"loss\": \"squared_error\",\n",
         "}"
       ],
@@ -1748,22 +1748,6 @@
       },
       "id": "PWdN5VHMiRd-",
       "execution_count": 21,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# reg = ensemble.GradientBoostingRegressor(**params)\n",
-        "# reg.fit(X_train1, y_train1)\n",
-        "\n",
-        "# mse = mean_squared_error(y_test1, reg.predict(X_test1), squared=False)\n",
-        "# print(\"The mean squared error (MSE) on test set: {:.4f}\".format(mse))"
-      ],
-      "metadata": {
-        "id": "_ypYJ7XUjQm_"
-      },
-      "id": "_ypYJ7XUjQm_",
-      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1779,20 +1763,21 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
-        "# due to lack of resources we run this several times to choose the best possbile combinations.\n",
-        "param_grid = {\n",
-        "    'n_estimators': [100, 500],\n",
-        "    'max_depth': [4, 6],\n",
-        "    'learning_rate': [0.1, 1],\n",
-        "}\n",
+        "# from sklearn.model_selection import GridSearchCV\n",
+        "# # due to lack of resources we run this several times to choose the best possbile combinations.\n",
+        "# param_grid = {\n",
+        "#     'n_estimators': [100, 500],\n",
+        "#     'max_depth': [4, 6],\n",
+        "#     'learning_rate': [0.1, 1],\n",
+        "# }\n",
         "\n",
-        "est = ensemble.GradientBoostingRegressor()\n",
+        "# est = ensemble.GradientBoostingRegressor()\n",
         "\n",
-        "gs_cv = GridSearchCV(est, param_grid, cv=5).fit(X_train, y_train)\n",
+        "# gs_cv = GridSearchCV(est, param_grid, cv=5).fit(X_train, y_train)\n",
         "\n",
-        "# best hyperparameter setting\n",
-        "gs_cv.best_params_"
+        "# # best hyperparameter setting\n",
+        "# gs_cv.best_params_\n",
+        "#{'learning_rate': 0.1, 'max_depth': 6, 'n_estimators': 500}"
       ],
       "metadata": {
         "colab": {
@@ -1941,10 +1926,9 @@
       "cell_type": "code",
       "source": [
         "params = {\n",
-        "    \"n_estimators\": 1000,\n",
-        "    \"max_depth\": 4,\n",
-        "    \"min_samples_split\": 5,\n",
-        "    \"learning_rate\": 0.01,\n",
+        "    \"n_estimators\": 500,\n",
+        "    \"max_depth\": 6,\n",
+        "    \"learning_rate\": 0.1,\n",
         "    \"loss\": \"squared_error\",\n",
         "}"
       ],
@@ -1988,7 +1972,7 @@
       "cell_type": "code",
       "source": [
         "mse = mean_squared_error(y_test1, reg.predict(X_test1), squared=False)\n",
-        "print(\"The mean squared error (MSE) on test set: {:.4f}\".format(mse))"
+        "print(\"The mean squared error (RMSE) on test set: {:.4f}\".format(mse))"
       ],
       "metadata": {
         "outputId": "fc29c6a4-8bc8-4865-b9b0-867ec42e354d",
@@ -2008,6 +1992,22 @@
         }
       ],
       "id": "5ryRd2NN4iFV"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg = ensemble.GradientBoostingRegressor(**params)\n",
+        "reg.fit(X_train1, y_train1)\n",
+        "\n",
+        "mse = mean_squared_error(y_test1, reg.predict(X_test1), squared=False)\n",
+        "print(\"The mean squared error (MSE) on test set: {:.4f}\".format(mse))"
+      ],
+      "metadata": {
+        "id": "_ypYJ7XUjQm_"
+      },
+      "id": "_ypYJ7XUjQm_",
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
