--- a/data6100_final_proj.ipynb
+++ b/data6100_final_proj.ipynb
@@ -245,7 +245,7 @@
         "id": "lHeJ_LCcdm-6"
       },
       "id": "lHeJ_LCcdm-6",
-      "execution_count": 3,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -281,10 +281,10 @@
           "height": 421
         },
         "id": "GC8JXcHyjMFL",
-        "outputId": "f77074a1-6db3-4731-cca1-89f26f1352f1"
+        "outputId": "3df6fa5f-60fa-418d-9114-8a87e8d5b779"
       },
       "id": "GC8JXcHyjMFL",
-      "execution_count": 11,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +324,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2b920526-b67a-4534-bb57-24da136850a2\">\n",
+              "  <div id=\"df-1b903ef4-b58f-4d79-996f-f36d60c33aa9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -450,7 +450,7 @@
               "</table>\n",
               "<p>109914 rows × 14 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2b920526-b67a-4534-bb57-24da136850a2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b903ef4-b58f-4d79-996f-f36d60c33aa9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -501,12 +501,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2b920526-b67a-4534-bb57-24da136850a2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1b903ef4-b58f-4d79-996f-f36d60c33aa9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2b920526-b67a-4534-bb57-24da136850a2');\n",
+              "          const element = document.querySelector('#df-1b903ef4-b58f-4d79-996f-f36d60c33aa9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -567,10 +567,10 @@
           "height": 646
         },
         "id": "jZn-5RW4Z5Kb",
-        "outputId": "23f5653f-b978-467b-b5eb-121c38935ed6"
+        "outputId": "5d29522b-c973-4b21-fd7e-67d8d0662b8c"
       },
       "id": "jZn-5RW4Z5Kb",
-      "execution_count": 12,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b5e6effc-e22f-4b4e-a34d-9e1f778a9744\">\n",
+              "  <div id=\"df-b1efb24e-43e2-431e-a0a7-8448ac81b0a8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -933,7 +933,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b5e6effc-e22f-4b4e-a34d-9e1f778a9744')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b1efb24e-43e2-431e-a0a7-8448ac81b0a8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -984,12 +984,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b5e6effc-e22f-4b4e-a34d-9e1f778a9744 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b1efb24e-43e2-431e-a0a7-8448ac81b0a8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b5e6effc-e22f-4b4e-a34d-9e1f778a9744');\n",
+              "          const element = document.querySelector('#df-b1efb24e-43e2-431e-a0a7-8448ac81b0a8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1012,7 +1012,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 96
         }
       ]
     },
@@ -1052,10 +1052,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AwX_NDR-l0IC",
-        "outputId": "c67cd71b-2abe-4558-e788-7a18a201c21c"
+        "outputId": "a74a2a90-8c75-48a0-fe7c-6c7c4ba6714d"
       },
       "id": "AwX_NDR-l0IC",
-      "execution_count": 13,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,34 +1081,38 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
         "X=df.iloc[1:10000,3:5].to_numpy()\n",
+        "\n",
+        "X = StandardScaler().fit_transform(X)\n",
+        "\n",
         "X"
       ],
       "metadata": {
-        "id": "h_U2DdX4Fubg",
-        "outputId": "99ccf39b-9f0d-459b-e0d7-d37bc4fd984d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h_U2DdX4Fubg",
+        "outputId": "618c6d3b-29c4-4688-b59e-8100ae2cbd3a"
       },
       "id": "h_U2DdX4Fubg",
-      "execution_count": 50,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[-74.016048,  40.711303],\n",
-              "       [-73.982738,  40.76127 ],\n",
-              "       [-73.98713 ,  40.733143],\n",
+              "array([[-0.98301202, -1.24341931],\n",
+              "       [-0.19241325,  0.29784188],\n",
+              "       [-0.29665551, -0.5697518 ],\n",
               "       ...,\n",
-              "       [-73.981183,  40.759347],\n",
-              "       [-73.980869,  40.763141],\n",
-              "       [-73.979005,  40.719887]])"
+              "       [-0.15550598,  0.23852582],\n",
+              "       [-0.14805332,  0.35555396],\n",
+              "       [-0.10381207, -0.97864083]])"
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 131
         }
       ]
     },
@@ -1119,7 +1123,7 @@
         "from sklearn.cluster import DBSCAN\n",
         "from sklearn import metrics\n",
         "\n",
-        "db = DBSCAN(eps=0.006, min_samples=10).fit(X)\n",
+        "db = DBSCAN(eps=0.7, min_samples=100).fit(X)\n",
         "labels = db.labels_\n",
         "\n",
         "# Number of clusters in labels, ignoring noise if present.\n",
@@ -1130,21 +1134,21 @@
         "print(\"Estimated number of noise points: %d\" % n_noise_)"
       ],
       "metadata": {
-        "id": "ilEqbsjHon-X",
-        "outputId": "df2fd8d0-33b2-4829-beef-35e439048e10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ilEqbsjHon-X",
+        "outputId": "815fe9e2-c8eb-4eaf-e91b-d3d6679aa2f0"
       },
       "id": "ilEqbsjHon-X",
-      "execution_count": 73,
+      "execution_count": 165,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Estimated number of clusters: 8\n",
-            "Estimated number of noise points: 156\n"
+            "Estimated number of clusters: 2\n",
+            "Estimated number of noise points: 47\n"
           ]
         }
       ]
@@ -1152,33 +1156,29 @@
     {
       "cell_type": "code",
       "source": [
-        "def create_map(df, cluster_column):\n",
-        "    m = folium.Map(location=[df.LAT.mean(), df.LON.mean()], zoom_start=9, tiles='OpenStreet Map')\n",
-        "\n",
-        "    for _, row in df.iterrows():\n",
-        "\n",
-        "        if row[cluster_column] == -1:\n",
-        "            cluster_colour = '#000000'\n",
-        "        else:\n",
-        "            cluster_colour = cols[row[cluster_column]]\n",
-        "\n",
-        "        folium.CircleMarker(\n",
-        "            location= [row['LAT'], row['LON']],\n",
-        "            radius=5,\n",
-        "            popup= row[cluster_column],\n",
-        "            color=cluster_colour,\n",
-        "            fill=True,\n",
-        "            fill_color=cluster_colour\n",
-        "        ).add_to(m)\n",
-        "        \n",
-        "    return m"
+        "unique, counts = np.unique(labels, return_counts=True)\n",
+        "print(np.asarray((unique, counts)).T)"
       ],
       "metadata": {
-        "id": "0b6wYgJhJqIl"
+        "id": "4hURxBulZ4Nq",
+        "outputId": "9db8c192-5109-4747-c034-fb91d6dedaa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "id": "0b6wYgJhJqIl",
-      "execution_count": 74,
-      "outputs": []
+      "id": "4hURxBulZ4Nq",
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[  -1   47]\n",
+            " [   0 9796]\n",
+            " [   1  156]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1188,11 +1188,12 @@
         "\n",
         "#dummy = np.array([-1, -1, -1, 2, 3, 4, 5, -1])\n",
         "#new = np.array([(counter+2)*x if x==-1 else x for counter, x in enumerate(dummy)])\n",
-        "model = DBSCAN(eps=0.01, min_samples=5).fit(X)\n",
-        "class_predictions = model.labels_\n",
-        "df = pd.DataFrame(X, columns = ['LAT','LON'])\n",
-        "df['CLUSTERS_DBSCAN'] = class_predictions\n",
-        "m = create_map(df, 'CLUSTERS_DBSCAN')\n",
+        "#model = DBSCAN(eps=0.01, min_samples=5).fit(X)\n",
+        "class_predictions = db.labels_\n",
+        "df1 = pd.DataFrame(X, columns = ['LAT','LON'])\n",
+        "df1['CLUSTERS_DBSCAN'] = class_predictions\n",
+        "m = create_map(df1, 'CLUSTERS_DBSCAN')\n",
+        "\n",
         "print(f'Number of clusters found: {len(np.unique(class_predictions))}')\n",
         "print(f'Number of outliers found: {len(class_predictions[class_predictions==-1])}')\n",
         "#print(f'Silhouette ignoring outliers: {silhouette_score(X[class_predictions!=-1], class_predictions[class_predictions!=-1])}')\n",
@@ -1201,29 +1202,11 @@
         "#print(f'Silhouette outliers as singletons: {silhouette_score(X, no_outliers)}')"
       ],
       "metadata": {
-        "id": "951foBu6JugB",
-        "outputId": "316a3ee4-d0a2-4965-cbbc-cd3dc5396fb5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 357
-        }
+        "id": "951foBu6JugB"
       },
       "id": "951foBu6JugB",
-      "execution_count": 75,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-75-ac5cf10de4ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'LAT'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'LON'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'CLUSTERS_DBSCAN'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclass_predictions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_map\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'CLUSTERS_DBSCAN'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Number of clusters found: {len(np.unique(class_predictions))}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Number of outliers found: {len(class_predictions[class_predictions==-1])}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-74-830d86b31558>\u001b[0m in \u001b[0;36mcreate_map\u001b[0;34m(df, cluster_column)\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mcluster_colour\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'#000000'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0mcluster_colour\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcluster_column\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         folium.CircleMarker(\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'cols' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
